tests/fixtures/valid/basic/hello_world.py
# The classic Hello World program
print(b"Hello, World!")
