tests/fixtures/invalid/abs_wrong_type.py
# abs() not supported for type Bytes
print(abs(b"hello"))
